# OJIK-BMS

./: .env.example  .env.prod.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  wrangler.jsonc
client/: eslint.config.js  gui_main.py  index.html  package-lock.json  package.json  pyproject.toml
client-tauri/src-tauri/: Cargo.toml  tauri.conf.json
client-tauri/src-tauri/capabilities/: default.json
client-tauri/src-tauri/icons/: icon.icns
client-tauri/src-tauri/src/: lib.rs  logging.rs  main.rs
client-tauri/src-tauri/src/commands/: auth.rs  config.rs  mod.rs  sync.rs  update.rs
client-tauri/src-tauri/src/domain/: auth.rs  beatoraja.rs  config.rs  fumen_detail.rs  lr2.rs  sync_api.rs  update_policy.rs
client/ojikbms_client/: __init__.py  __main__.py  auth.py  config.py  scan_cache.py  sync.py
client/ojikbms_client/gui/: __init__.py  main_window.py  workers.py
client/ojikbms_client/parsers/: beatoraja.py  bms_scanner.py  lr2.py
client/scripts/: register-client-update.py
client/src/: App.tsx  main.tsx  tauri.ts  types.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  main.rs
client/src-tauri/src/commands/: config.rs  sync.rs  update.rs
client/src-tauri/src/domain/: auth.rs  beatoraja.rs  config.rs  fumen_detail.rs  lr2.rs  mod.rs  sync_api.rs  update_policy.rs
client/src/components/about/: DiagnosticsPanel.tsx
client/src/components/auth/: AuthPill.tsx
client/src/components/language/: LanguageMenu.tsx  LanguageSegmented.tsx
client/src/components/layout/: AboutFooter.tsx  BannerStack.tsx  Topbar.tsx
client/src/hooks/: use-config.ts  use-sync.ts  use-update.ts
client/src/lib/: format.ts  log-format.ts  path-validity.ts  update-announcement-core.js  update-announcement.test.mjs  update-announcement.ts
client/src/lib/i18n/: client.ts  (+8 more)
client/src/styles/: layout.css  log.css  primitives.css  source.css  sync.css  tokens.css  wizard.css
client/tests/: test_parsers.py  test_sync_batching.py
(+600 files in other folders)
