[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ojikbms-client"
version = "0.1.0"
description = "OJIK BMS client - scans BMS files and syncs to server"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "keyring>=25.2.0",
]

[project.optional-dependencies]
gui = ["PyQt6>=6.6.0"]

[project.scripts]
ojikbms-client = "ojikbms_client.__main__:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["ojikbms_client"]
